--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-three/fiber": "^8.17.14",
     "animate.css": "^4.1.1",
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "framer-motion": "^12.4.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
