--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-three/fiber": "^8.17.14",
     "animate.css": "^4.1.1",
     "axios": "^1.7.9",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.0",
     "framer-motion": "^12.4.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.13.4",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
