--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,9 @@
 [build]
-functions = "netlify/functions"
+  command = "npm run build"
+  functions = "netlify/functions"
+  publish = "build"
+
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
