--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "animate.css": "^4.1.1",
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.0",
+    "chart.js": "^4.4.7",
     "framer-motion": "^12.4.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^11.0.3",
+    "socket.io-client": "^4.8.1",
     "update-notifier": "^7.3.1"
   },
   "devDependencies": {
