--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^12.4.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
+    "mongodb": "^6.13.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
