--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,6 @@
   publish = "dist"
 
 [[redirects]]
-  from = "/api/*"
+  from = "/.netlify/functions/*"
   to = "/.netlify/functions/:splat"
   status = 200
