--- a/package.json
+++ b/package.json
@@ -18,16 +18,20 @@
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.0",
     "chart.js": "^4.4.7",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "framer-motion": "^12.4.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
     "mongodb": "^6.13.0",
+    "mongoose": "^8.10.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^11.0.3",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "update-notifier": "^7.3.1"
   },
